# scalarflow

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRACT.md  DEVELOPMENT.md  GOALS.md  Makefile  README.md  RESULTS.md  codegen.py  edge.h  graph.cpp  graph.h
data/: balanced.sfg  compute_pressure.sfg  input_pressure.sfg  output_pressure.sfg  random.sfg
doc/: DEVELOPMENT.md
docs/: DEVELOPMENT.md  RESULTS.md
examples/: codegen.py  complex.sfg  generate_graph.py  graphgen.py  random.sfg  sample.sfg  simple.sfg
extra/: Makefile
make/: custom.mk  ews.mk
scripts/: codegen.py
src/: file.h  fileinterface.h  graph.cpp  lex.yy.c  lexer.cpp  lexer.h  lexer.l  main.cpp  parser.l  parser.y
src/scalarflow/: edge.h  graph.cpp  graph.h  node.cpp  node.h  ops.hpp  pair_hash.h  random.cpp  sfg.cpp  sfg.h  sfg.hpp
tests/: test_edge.cpp  test_graph.cpp  unit_tests.cpp
